note alignment and fixed notifications in mobile

--- a/webapp/src/react/components/note-editor/styles/note-editor.scss
+++ b/webapp/src/react/components/note-editor/styles/note-editor.scss
@@ -8,6 +8,8 @@
 }
 
 .DraftEditor-root {
+  @include widthSpecifications(initial, 650px);
+  margin: 0 auto;
   position: relative;
   text-align: initial;
 
