--- a/webapp/src/react/views/side-note/styles/side-note.scss
+++ b/webapp/src/react/views/side-note/styles/side-note.scss
@@ -4,8 +4,7 @@
 .side-note {
   $b: &;
   @include size(100%);
-  @include flex(center, flex-start);
-  @include flex(column);
+  @include flexContainer('column', center, top);
 
   &__header {
     @include size(100%, auto);
